--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "prettify": "prettier --write 'src/**/*.js'",
     "flow": "flow",
     "lint": "eslint src",
-    "test": "jest",
+    "test": "jest -u",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "travis-deploy-once": "travis-deploy-once",
     "semantic-release": "semantic-release"
   },
@@ -21,15 +22,9 @@
     "type": "git",
     "url": "https://github.com/TheWorm/react-online.git"
   },
-  "keywords": [
-    "react",
-    "online",
-    "offline",
-    "connection",
-    "status",
-    "network"
-  ],
-  "author": "Davide Briani <johnnytheworm@gmail.com> (https://github.com/theworm)",
+  "keywords": ["react", "online", "offline", "connection", "status", "network"],
+  "author":
+    "Davide Briani <johnnytheworm@gmail.com> (https://github.com/theworm)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/TheWorm/react-online/issues"
@@ -41,10 +36,12 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.3",
+    "babel-jest": "23.0.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.7.0",
     "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.24.1",
+    "codecov.io": "0.1.6",
     "commitizen": "2.10.1",
     "cz-conventional-changelog": "2.1.0",
     "eslint": "4.19.1",
@@ -54,6 +51,7 @@
     "jest": "23.1.0",
     "lint-staged": "7.1.2",
     "prettier": "1.13.3",
+    "react-test-renderer": "16.4.0",
     "rimraf": "2.6.2",
     "semantic-release": "^15.5.0",
     "travis-deploy-once": "^5.0.0"
@@ -69,8 +67,5 @@
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
   },
-  "files": [
-    "dist",
-    "README.md"
-  ]
+  "files": ["dist", "README.md"]
 }
