--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "prebuild": "rimraf dist",
     "build": "babel src --out-dir dist --ignore *.test.js",
     "commit": "git-cz",
-    "precommit": "flow check && lint-staged",
+    "precommit": "flow check src && lint-staged",
     "prettify": "prettier --write 'src/**/*.js'",
-    "flow": "flow",
+    "flow": "flow src",
     "lint": "eslint src",
     "test": "jest -u",
     "test:watch": "jest --watch",
@@ -61,7 +61,7 @@
     "prettier": "1.13.3",
     "react-test-renderer": "16.4.0",
     "rimraf": "2.6.2",
-    "semantic-release": "^15.5.0",
+    "semantic-release": "15.5.1",
     "travis-deploy-once": "^5.0.0"
   },
   "lint-staged": {
