--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "codecov.io": "0.1.6",
     "commitizen": "2.10.1",
     "cz-conventional-changelog": "2.1.0",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.19.1",
     "eslint-plugin-react-app": "3.0.0",
     "flow-bin": "0.73.0",
@@ -59,6 +61,7 @@
     "jest": "23.1.0",
     "lint-staged": "7.1.2",
     "prettier": "1.13.3",
+    "react-dom": "16.4.0",
     "react-test-renderer": "16.4.0",
     "rimraf": "2.6.2",
     "semantic-release": "15.5.1",
